# LVGL

display/: CMakeLists.txt  lv_conf.h  main.cpp
hello/: CMakeLists.txt  lv_conf.h  main.cpp
